# farmacologia

./: .gitignore  Cargo.toml  README.md  cookies.txt
.zed/: settings.json
src/: decrypt.rs  hotmart.rs  lib.rs  main.rs  request.rs  videos.rs
tutorial/: .gitignore  latexmkrc  main.tex
tutorial/config/: symbols.tex  theorems.tex
