[package]
name = "hotmart_videos"
version = "0.1.0"
authors = ["tiagodepalves <tiagodepalves@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "AGPL-3.0-or-later"
publish = false
default-run = "cooked"

[lib]
name = "hotmart"

[dependencies]
tempfile = "*"
openssl = "*"
hex = "*"
reqwest = { version = "*", features = ["gzip", "trust-dns"] }
tokio = { version = "*", features = ["full"] }

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 4
rpath = false
